<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Arpit" where
      Arpit is the user's name. [CHAR LIMIT=NONE]
      -->
    <string name="order_summary_name">Name : <xliff:g id="name" example="Arpit">%s</xliff:g></string>
    <string name="app_name">Just Java</string>
    <string name="name">   Name </string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="Chocolate">Chocolate</string>
    <string name="Quantity">Quantity</string>
    <string name="orderSummary">Order Summary</string>
    <string name="order">Order</string>
    <string name="order_summary_quantity">Quantity : <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total Amount = $ <xliff:g id="price" example="$10">%d</xliff:g></string>
    <string name="pricePerCup">Price Per Cup $<xliff:g id="pricePerCup" example="$10">%d</xliff:g> (Base Price)</string>
    <string name="addWhippedCream">With Whipped Cream Extra Charge is 1$</string>
    <string name="addChocolate">With Chocolate Extra Charge is 2$</string>
    <string name="CoffeeOrderFor">Coffee Order for <xliff:g id="CoffeeOrderFor" example="Arpit">%s</xliff:g></string>

</resources>
